# omni-sentinel

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package.json  pnpm-lock.yaml  sst.config.ts
.sst/platform/: config.d.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  next.config.ts  package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  page.tsx
apps/web/src/db/: index-tcp.ts  index.ts  schema.ts
apps/web/src/lib/: data.ts
apps/web/src/scripts/: seed-logs.ts
openspec/: project.md
openspec/changes/add-tauri-desktop-and-readme/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-12-add-dashboard-view/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-12-add-db-persistence/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-12-add-log-seeder/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-12-complete-sidebar-modules/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-12-init-sentinel-core/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-12-integrate-vercel-ai-sdk/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-12-prod-ready-ingestion/: design.md  proposal.md  tasks.md
openspec/specs/ai/: spec.md
openspec/specs/dashboard/: spec.md
openspec/specs/infrastructure/: spec.md
openspec/specs/ingestion/: spec.md
openspec/specs/realtime-updates/: spec.md
openspec/specs/seeding/: spec.md
(+29 files in other folders)
