[package]
name = "omni-sentinel"
version = "1.0.0"
description = "Omni-Sentinel Desktop Application"
authors = ["Omni-Sentinel Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "omni_sentinel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
